--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "apexcharts": "^5.3.4"
+        "apexcharts": "^5.3.4",
+        "mqtt": "^5.14.1"
     }
 }
