--- a/.env
+++ b/.env
@@ -45,10 +45,10 @@ CACHE_STORE=database
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=predis
-REDIS_HOST=redis-16886.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com
+REDIS_HOST=redis-18365.c1.ap-southeast-1-1.ec2.cloud.redislabs.com
 REDIS_USERNAME=default
-REDIS_PASSWORD=vQo4uILtBHnMbjkqhYOPyJZEImXuPag4
-REDIS_PORT=16886
+REDIS_PASSWORD=y5NJnTGGpLgu73wnX3sPlhMERegEP6wT
+REDIS_PORT=18365
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
