perbaikan logo dan konfigurasi AWS IoT

--- a/.env
+++ b/.env
@@ -68,10 +68,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # AWS IoT Core Configuration
-AWS_IOT_ENDPOINT=a2un6419u8jckh-ats.iot.us-east-1.amazonaws.com
+AWS_IOT_ENDPOINT=a1uhfqvc4cvok5-ats.iot.us-east-1.amazonaws.com
 AWS_IOT_PORT=8883
-AWS_IOT_TOPIC=esp8266/kekeruhan
+AWS_IOT_TOPIC=ESP8266/kekeruhan
 AWS_IOT_CLIENT_ID=laravel_listener
-AWS_IOT_CERT_PATH= aws-iot/certificate.pem
-AWS_IOT_PRIVATE_KEY_PATH= aws-iot/private.pem.key
-AWS_IOT_CA_PATH= aws-iot/AmazonRootCA1.pem
+AWS_IOT_CERT_PATH=aws-iot/certificate.pem
+AWS_IOT_PRIVATE_KEY_PATH=aws-iot/private.pem.key
+AWS_IOT_CA_PATH=aws-iot/AmazonRootCA1.pem
